@@ -1,4 +1,4 @@
 AUX libview-0.5.6-pcfix.patch 600 RMD160 58869acfda194c671bc6c858d0f8cfd7bc62851b SHA1 393d7d2e440173cd0cb2edc7de10629dab1f1c6e SHA256 4d93c8067fb1d371780a665fff731dd27ce3daac983ea63efbb7ba2bad492d39
-DIST libview-0.6.0.tar.bz2 285329 RMD160 dcb1e7c974b4eeaf3931531be902c4bddac08453 SHA1 3a0ec2338229a9ca5c55b6a32f2ac2710f4b9f72 SHA256 8be74fbc57be8f0262e037bb99f578b2967fcefdc42d27865225921e1c73ef1c
-EBUILD libview-0.6.0.ebuild 628 RMD160 240347c72c57a85398e61cf6d760d2a51e558a2c SHA1 a751a2fcd73f09d92fd6018d617922e821713310 SHA256 b0e114ed368274b5fdde2a2ba055d7986bc7e10fb335e2fc10667bff474a67ce
+DIST libview-0.6.2.tar.bz2 279507 RMD160 6483afadda26dc47382de1c68e2e388d2d6fde5f SHA1 03072adca31982019db7409300dc804ea2bf3c4e SHA256 2d9874491ba696bc264750fdb371c0eabae47e82a2709f31d2fa3501e8cf7eb3
+EBUILD libview-0.6.2.ebuild 645 RMD160 39362b4d3435ad3b0d9c5a99776b134114eddd43 SHA1 92c2c1c877926bde7d3597da59766021ef4da812 SHA256 f883257e7821285fc68e35a598c238837d61bd3c814a421888f7040d9ac9415b
 MISC metadata.xml 311 RMD160 868d0eab62db916aa47b7f440a3f4efecc6163b1 SHA1 0e56da7be32af7c553c07179c574cd7837298702 SHA256 774cc71e08a317563fb2700d5aac76af10e3e31ae7c1c58325730bfa0fbb110a
